# SimpleEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  imgui.ini  main.cpp  run.sh
Example/: CMakeLists.txt  app.cpp  app.h  main.cpp  opengl_renderer.cpp  opengl_renderer.h  renderer.h  vulkan_renderer.cpp  vulkan_renderer.h  window.cpp  window.h
Minimal_Example/: opengl_minimal  opengl_minimal.cpp  vulkan_minimal  vulkan_minimal.cpp
apps/sandbox/: CMakeLists.txt
apps/sandbox/src/: App.cpp  App.h  AppLayer.cpp  AppLayer.h  AppTest.cpp  main.cpp
assets/scenes/: scene.json  scenev2.json
assets/shaders/: basic.frag  basic.vert
engine/: CMakeLists.txt
engine/include/: Engine.h  se_pch.h
engine/include/SimpleEngine/: Camera.h  Renderer.h  Shader.h  Window.h
engine/include/engine/: Application.h  Camera.h  Event.h  ImGuiLayer.h  Input.h  InputHandler.h  Layer.h  Log.h  Mesh.h  MeshFactory.h  OldRenderer.h  OpenGLRenderer.h  Renderer.h  Shader.h  VulkanApp.h  VulkanRenderer.h  Window.h
engine/include/engine/audio/: Audio.h  AudioEmitter.h  AudioManager.h  AudioSystem.h
engine/include/engine/ecs/: Components.h  Entity.h  RenderSystem.h  Scene.h  Serialization.h
engine/include/engine/renderer/: Buffer.h  GraphicsContext.h  Material.h  RenderCommand.h  SceneRenderer.h  VertexArray.h  renderer_v2.h  shader_v2.cpp  shader_v2.h
engine/include/engine/renderer/opengl/: OpenGLBuffer.h  OpenGLDevice.h
engine/include/engine/renderer/rhi/: IBuffer.h  IGraphicsDevice.h  RendererFactory.h
engine/include/engine/renderer/vulkan/: VulkanBuffer.h  VulkanDevice.h
engine/include/engine/resources/: MaterialManager.h  MeshManager.h
engine/include/engine/utils/: FilesHandler.h  GLUtils.cpp  GLUtils.h
engine/libs/glad/include/glad/: glad.h
engine/libs/glad/src/: glad.c
engine/src/: Application.cpp  Camera.cpp  ImGuiLayer.cpp  Input.cpp  InputHandler.cpp  Layer.cpp  Log.cpp  Mesh.cpp  MeshFactory.cpp  OldRenderer.cpp  OpenGLRenderer.cpp  Renderer.cpp  Shader.cpp  VulkanRenderer.cpp  Window.cpp
engine/src/Renderer/: Buffer.cpp  GraphicsContext.cpp  Material.cpp  RenderCommand.cpp  SceneRenderer.cpp  VertexArray.cpp  renderer_v2.cpp  shader_v2.cpp
engine/src/audio/: Audio.cpp  AudioEmitter.cpp  AudioManager.cpp  AudioSystem.cpp
engine/src/ecs/: Entity.cpp  RenderSystem.cpp  Scene.cpp
engine/src/renderer/opengl/: OpenGLBuffer.cpp  OpenGLDevice.cpp
engine/src/renderer/vulkan/: VulkanBuffer.cpp  VulkanDevice.cpp
engine/src/resources/: MaterialManager.cpp  MeshManager.cpp
include/: App.h  Renderer.h  Window.h
scripts/: build.bat  format-all-project.bat  generate_visual_studio_files_and_build.bat  run.sh
src/: App.cpp  Renderer.cpp  main.cpp
